<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.profile.ProfileActivity">

        <TextView
            android:id="@+id/label_my_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/airbnb_cereal_bold"
            android:text="@string/my_profile"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/rasyidin"
            app:civ_border_color="@color/primaryColor"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_my_profile" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/airbnb_cereal_bold"
            android:text="@string/my_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile" />

        <TextView
            android:id="@+id/tv_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_regular"
            android:text="@string/my_email"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <View
            android:id="@+id/view_decor"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/fadeColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mail" />

        <View
            android:id="@+id/view_decor2"
            android:layout_width="5dp"
            android:layout_height="27dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/primaryColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_decor" />

        <TextView
            android:id="@+id/label_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/airbnb_cereal_bold"
            android:text="@string/summary"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/view_decor2"
            app:layout_constraintStart_toEndOf="@+id/view_decor2"
            app:layout_constraintTop_toTopOf="@+id/view_decor2" />

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/josefin_sans_regular"
            android:text="@string/my_summary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_decor2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

