<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="4dp"
    android:elevation="16dp"
    android:padding="10dp"
    app:cardCornerRadius="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/frame_img"
            android:layout_width="160dp"
            android:layout_height="110dp"
            app:cardCornerRadius="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shp_white_top"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_tourism"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gallery"
                    android:contentDescription="@string/image_tourism"
                    android:scaleType="fitCenter" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/img_placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="image_loading.json"
                    app:lottie_loop="true" />
            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/airbnb_cereal_bold"
            android:maxLines="2"
            android:text="@string/tourism_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/frame_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/josefin_sans_regular"
            android:maxLines="3"
            android:text="@string/item_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/frame_img"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_title" />

        <ImageView
            android:id="@+id/img_like"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/icon_like"
            android:src="@drawable/ic_like"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/frame_img"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_subtitle"
            app:layout_constraintVertical_bias="0.888" />

        <TextView
            android:id="@+id/tv_count_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/josefin_sans_regular"
            android:text="@string/count_like"
            android:textColor="@color/secondaryColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_like"
            app:layout_constraintTop_toTopOf="@+id/img_like"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>