<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:background="#b7e7fe"
        android:theme="@style/Theme.TravelApp.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/img_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/background_image"
                android:src="@drawable/ic_bg_main" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="8dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    tools:ignore="UselessParent">

                    <View
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@drawable/shp_round_white" />

                    <ImageView
                        android:id="@+id/img_profile"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/image_profile"
                        android:src="@drawable/ic_profile" />
                </FrameLayout>

            </RelativeLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/bg_shape_round_top_corners">

                <View
                    android:id="@+id/shp_top_decor"
                    android:layout_width="32dp"
                    android:layout_height="4dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/shp_circle_grey" />

            </RelativeLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <View
                        android:id="@+id/view_decor"
                        android:layout_width="5dp"
                        android:layout_height="27dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/primaryColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/josefin_sans_regular"
                        android:text="@string/label_popular"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="@+id/view_decor"
                        app:layout_constraintStart_toEndOf="@+id/view_decor"
                        app:layout_constraintTop_toTopOf="@+id/view_decor" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_tourism"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/view_decor"
                        app:layout_constraintVertical_bias="0.0"
                        app:spanCount="1"
                        tools:listitem="@layout/item_list_tourism" />

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/progress_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view_decor"
                        app:layout_constraintVertical_bias="0.0"
                        app:shimmer_auto_start="true">

                        <include layout="@layout/shimmer_effect" />
                    </com.facebook.shimmer.ShimmerFrameLayout>

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/img_no_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view_decor"
                        app:layout_constraintVertical_bias="0.0"
                        app:lottie_fileName="no_data.json"
                        app:lottie_loop="true" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>